--- a/index.html
+++ b/index.html
@@ -15,20 +15,20 @@
 <body class="body">
 
   <header>
-    <img src="images/Logocasa.png" alt="Logo Casan">
+    <img src="images/logoaguasdorio.png" alt="Logo águas do rio">
     <nav>
       <ul>
-        <li><a href="https://www.saneago.com.br/dicas/" target="_blank">Dicas</a></li>
-        <li><a href="https://www.saneago.com.br/" target="_blank">Casan</a></li>
-        <li><a href="https://www.saneago.com.br/#/ouvidoria" target="_blank">Contato</a></li>
+        <li><a href="https://aguasdorio.com.br/categoria/dicas/" target="_blank">Dicas</a></li>
+        <li><a href="https://aguasdorio.com.br/" target="_blank">Águas do Rio</a></li>
+        <li><a href="https://aguasdorio.com.br/contato/" target="_blank">Contato</a></li>
       </ul>
     </nav>
   </header>
 
   <section class="hero">
     <h1>Dicas de Economia de Água</h1>
-    <p>Com a Casan, cuide do futuro hídrico de Santa Catarina!</p>
-    <a class="btn" href="https://www.saneago.com.br/dicas/" target="_blank">Saiba Mais</a>
+    <p>Com a águas do rio , cuide do futuro hídrico do Rio de Janeiro!</p>
+    <a class="btn" href="https://aguasdorio.com.br/categoria/dicas/" target="_blank">Saiba Mais</a>
     <div class="dots">
       <span class="active"></span>
       <span></span>
@@ -40,15 +40,15 @@
     <h2>Galeria de Dicas Sustentáveis</h2>
     <div class="gallery-row">
       <div>
-        <a href="https://www.casan.com.br/noticia/index/url/casan-reforca-boas-praticas-para-uso-da-agua-2" target="_blank"><img src="images/dica-01.jpg" alt="Reaproveitamento de água Casan"></a>
+        <a href="https://aguasdorio.com.br/aguas-do-rio-discute-estrategias-sustentaveis-para-o-uso-da-agua/" target="_blank"><img src="images/dica-01.jpg" alt="Reaproveitamento de água, Águas do Rio"></a>
         <p>Reaproveitamento de Água</p>
       </div>
       <div>
-        <a href="https://www.imagemdailha.com.br/blog/casan-reforca-pedido-de-uso-consciente-de-agua.html" target="_blank"><img src="images/dica-03.jpg" alt="Ducha econômica Casan"></a>
+        <a href="https://aguasdorio.com.br/responsabilidade-social/" target="_blank"><img src="images/dica-03.jpg" alt="Ducha econômica Águas do Rio"></a>
         <p>Ducha Econômica</p>
       </div>
       <div>
-        <a href="https://www.saneago.com.br/#/noticia_interna/11009/3" target="_blank"><img src="images/dica-03.png" alt="Conserto de vazamentos Casan"></a>
+        <a href="https://aguasdorio.com.br/tag/vazamentos/" target="_blank"><img src="/images/dica-03.png" "Conserto de vazamentos Águas do Rio"></a>
         <p>Conserto de Vazamentos</p>
       </div>
     </div>
@@ -57,18 +57,18 @@
   <section class="history">
     <div class="container">
       <div class="col">
-        <h2>Sobre a Casan</h2>
-        <p>A Casan é referência em gestão hídrica e sustentabilidade em Santa Catarina. Com iniciativas inovadoras, a empresa busca conscientizar a população sobre a importância de preservar nossos recursos hídricos.</p>
-        <p>Fonte: <a href="https://www.casan.com.br" target="_blank">Casan</a></p>
+        <h2>Sobre a Águas do Rio</h2>
+        <p>A Águas do Rio é referência em gestão hídrica e sustentabilidade no Rio de Janeiro. Com iniciativas inovadoras, a empresa busca conscientizar a população sobre a importância de preservar nossos recursos hídricos.</p>
+        <p>Fonte: <a href="https://aguasdorio.com.br/" target="_blank">Casan</a></p>
       </div>
       <div class="col">
-        <a href="https://www.casan.com.br/noticia/index/url/comunicado-casan-municipio-de-chapeco-3" target="_blank"><img src="images/saneago-info.jpg" alt="Informações sobre a Casan"></a>
+        <a href="https://aguasdorio.com.br/quem-somos/" target="_blank"><img src="images/aguas-info.jpg" alt="Informações sobre a Águas do Rio"></a>
       </div>
     </div>
   </section>
 
   <footer>
-    <p>&copy; 2024 Casan - Todos os Direitos Reservados</p>
+    <p>&copy; 2024 Águas do Rio - Todos os Direitos Reservados</p>
   </footer>
 </body>
 
