--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="keywords" content="Casan, economia de água, Santa Catarina, dicas de sustentabilidade" />
-  <meta name="description" content="Aprenda dicas práticas para economizar água com a Casan. Descubra como reduzir o desperdício e contribuir para a sustentabilidade em Goiás." />
+  <meta name="keywords" content="aguas do rio, economia de água, rio de Janeiro, dicas de sustentabilidade" />
+  <meta name="description" content="Aprenda dicas práticas para economizar água com a aguas do rio. Descubra como reduzir o desperdício e contribuir para a sustentabilidade do Rio de Janeiro." />
+  <meta name="google-site-verification" content="XesSaqZ8D2d3Wwnyd5LpYrFHdf-kkuxq4BmN-XhagpE" />
   <link rel="stylesheet" href="css/style.css">
   <link rel="canonical" href="https://economiacasan.vercel.app/">
   <title>Economize Água com a Casan - Dicas Sustentáveis.</title>
