--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta name="google-site-verification" content="XesSaqZ8D2d3Wwnyd5LpYrFHdf-kkuxq4BmN-XhagpE" />
   <link rel="stylesheet" href="css/style.css">
   <link rel="canonical" href="https://economiacasan.vercel.app/">
-  <title>Economize Água com a Casan - Dicas Sustentáveis.</title>
+  <title>Economize Água com a Águas do Rio - Dicas Sustentáveis.</title>
 </head>
 
 <body class="body">
