--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="description" content="Aprenda dicas práticas para economizar água com a aguas do rio. Descubra como reduzir o desperdício e contribuir para a sustentabilidade do Rio de Janeiro." />
   <meta name="google-site-verification" content="XesSaqZ8D2d3Wwnyd5LpYrFHdf-kkuxq4BmN-XhagpE" />
   <link rel="stylesheet" href="css/style.css">
-  <link rel="canonical" href="https://economiacasan.vercel.app/">
+  <link rel="canonical" href="https://aguasdorio.vercel.app/">
   <title>Economize Água com a Águas do Rio - Dicas Sustentáveis.</title>
 </head>
 
