--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       <div class="col">
         <h2>Sobre a Águas do Rio</h2>
         <p>A Águas do Rio é referência em gestão hídrica e sustentabilidade no Rio de Janeiro. Com iniciativas inovadoras, a empresa busca conscientizar a população sobre a importância de preservar nossos recursos hídricos.</p>
-        <p>Fonte: <a href="https://aguasdorio.com.br/" target="_blank">Casan</a></p>
+        <p>Fonte: <a href="https://aguasdorio.com.br/" target="_blank">Águas do Rio</a></p>
       </div>
       <div class="col">
         <a href="https://aguasdorio.com.br/quem-somos/" target="_blank"><img src="images/aguas-info.jpg" alt="Informações sobre a Águas do Rio"></a>
