--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <p>Ducha Econômica</p>
       </div>
       <div>
-        <a href="https://aguasdorio.com.br/tag/vazamentos/" target="_blank"><img src="/images/dica-03.png" "Conserto de vazamentos Águas do Rio"></a>
+        <a href="https://aguasdorio.com.br/tag/vazamentos/" target="_blank"><img src="/images/dica-03.png" alt="Conserto de vazamentos Águas do Rio"></a>
         <p>Conserto de Vazamentos</p>
       </div>
     </div>
