--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
 
   gtag('config', 'G-TRVX952GEJ');
 </script>
+  <!-- Google tag (gtag.js) event -->
+<script>
+  gtag('event', 'ads_conversion_Enviar_formul_rio_de_le_1', {
+    // <event_parameters>
+  });
+</script>
+
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
