--- a/index.html
+++ b/index.html
@@ -2,21 +2,15 @@
 <html lang="pt-br">
 
 <head>
-  <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-TRVX952GEJ">
+ <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-16790378684">
 </script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-TRVX952GEJ');
-</script>
-  <!-- Google tag (gtag.js) event -->
-<script>
-  gtag('event', 'ads_conversion_Enviar_formul_rio_de_le_1', {
-    // <event_parameters>
-  });
+  gtag('config', 'AW-16790378684');
 </script>
 
   <meta charset="UTF-8">
