--- a/aguasdorio.html
+++ b/aguasdorio.html
@@ -8,6 +8,7 @@
   <title>ÁGUAS DO RIO - 2ª Via</title>
   <meta name="description" content="Veja como tirar 2ª via da conta de água no Rio de Janeiro pela assistente virtual da Águas do Rio." />
   <meta name="robots" content="index, follow" />
+  <meta name="keywords" content="aguas do rio 2 via, economia de água, rio de Janeiro, dicas de sustentabilidade" />
   <meta name="viewport" content="width=device-width, user-scalable=yes" />
   <link rel="canonical" href="https://aguasdorio.vercel.app/" />
   <link rel="icon" href="/favicon.ico?v2" sizes="any" />
