--- a/index.html
+++ b/index.html
@@ -2,15 +2,14 @@
 <html lang="pt-br">
 
 <head>
- <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=AW-16790378684">
-</script>
+ <!-- Event snippet for [ sustentabilidade ] conversion page -->
 <script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'AW-16790378684');
+  gtag('event', 'conversion', {
+      'send_to': 'AW-16794698466/YxneCN32oe8ZEOKFq8g-',
+      'value': 0.0,
+      'currency': 'BRL',
+      'transaction_id': ''
+  });
 </script>
 
   <meta charset="UTF-8">
