--- a/index.html
+++ b/index.html
@@ -2,16 +2,16 @@
 <html lang="pt-br">
 
 <head>
- <!-- Event snippet for [ sustentabilidade ] conversion page -->
-<script>
-  gtag('event', 'conversion', {
-      'send_to': 'AW-16794698466/YxneCN32oe8ZEOKFq8g-',
-      'value': 0.0,
-      'currency': 'BRL',
-      'transaction_id': ''
-  });
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-16794698466">
 </script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'AW-16794698466');
+</script>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
