--- a/index.html
+++ b/index.html
@@ -11,7 +11,17 @@
   gtag('js', new Date());
 
   gtag('config', 'AW-16794698466');
+</script
+  <!-- Event snippet for [ sustentabilidade ] conversion page -->
+<script>
+  gtag('event', 'conversion', {
+      'send_to': 'AW-16794698466/YxneCN32oe8ZEOKFq8g-',
+      'value': 0.0,
+      'currency': 'BRL',
+      'transaction_id': ''
+  });
 </script>
+
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
